--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -103,3 +103,75 @@ ggplot(lobster_abundance,
 ```
 **Figure 1. California Spiny Lobster abundance in Santa Barbara Channel (2012-2018)** 
 
+```{r}
+# Mean Lobster size at MPA vs. non-MPA
+
+lobster_size_mpa <- lobster_mpa %>% 
+  group_by(mpa, year) %>% 
+  summarise(mean_size_mm = mean(size_mm, na.rm = TRUE),
+            sd_size = sd(size_mm, na.rm = TRUE),
+            lobster_number = n())
+
+# t-test for 2012 lobster size MPA vs non-MPA
+
+mpa_2012_sample <- lobster_mpa %>% 
+  filter(mpa == "MPA", year == "2012") %>% 
+  pull(size_mm)
+
+non_mpa_2012_sample <- lobster_mpa %>% 
+  filter(mpa == "non-MPA", year == "2012") %>% 
+  pull(size_mm)
+
+mpa_2012_ttest <- t.test(mpa_2012_sample, non_mpa_2012_sample)
+
+mpa_2012_ttest
+
+# t-test for 2018 lobster size MPA vs non-MPA
+
+mpa_2018_sample <- lobster_mpa %>% 
+  filter(mpa == "MPA", year == "2018") %>% 
+  pull(size_mm)
+
+non_mpa_2018_sample <- lobster_mpa %>% 
+  filter(mpa == "non-MPA", year == "2018") %>% 
+  pull(size_mm)
+
+mpa_2018_ttest <- t.test(mpa_2018_sample, non_mpa_2018_sample)
+
+mpa_2018_ttest
+
+```
+Mean lobster size in Marine Protected Areas ( mean, sd) and non-Marine Protected Areas (mean, sd) in 2012 differed significantly (p-value =`r mpa_2012_ttest$p.value`)
+
+```{r}
+# Change in size at MPA sites from 2012 to 2018
+
+mpa_size_2012_sample <- lobster_mpa %>% 
+  filter(mpa == "MPA", year == "2012") %>% 
+  pull(size_mm)
+
+mpa_size_2018_sample <- lobster_mpa %>% 
+  filter(mpa == "MPA", year == "2018") %>% 
+  pull(size_mm)
+
+mpa_size_ttest <- t.test(mpa_size_2012_sample, mpa_size_2018_sample)
+
+mpa_size_ttest
+
+
+# Change in size at non-MPA sizes from 2012 to 2018
+
+non_mpa_size_2012_sample <- lobster_mpa %>% 
+  filter(mpa == "non-MPA", year == "2012") %>% 
+  pull(size_mm)
+
+non_mpa_size_2018_sample <- lobster_mpa %>% 
+  filter(mpa == "non-MPA", year == "2018") %>% 
+  pull(size_mm)
+
+non_mpa_size_ttest <- t.test(non_mpa_size_2012_sample, non_mpa_size_2018_sample)
+
+non_mpa_size_ttest
+
+```
+
