--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -117,7 +117,7 @@ lobster_size_mpa <- lobster_mpa %>%
             sd_size = sd(size_mm, na.rm = TRUE),
             lobster_number = n())
 
-# t-test for 2012 lobster size MPA vs non-MPA
+# t-test for 2012 lobster size MPA vs non-MPA (two-sample, two-sided, unpaired t-test)
 
 mpa_2012_sample <- lobster_mpa %>% 
   filter(mpa == "MPA", year == "2012") %>% 
@@ -131,7 +131,7 @@ mpa_2012_ttest <- t.test(mpa_2012_sample, non_mpa_2012_sample)
 
 mpa_2012_ttest
 
-# t-test for 2018 lobster size MPA vs non-MPA
+# t-test for 2018 lobster size MPA vs non-MPA (two-sample, two-sided, unpaired t-test)
 
 mpa_2018_sample <- lobster_mpa %>% 
   filter(mpa == "MPA", year == "2018") %>% 
@@ -149,7 +149,7 @@ mpa_2018_ttest
 Mean lobster size in Marine Protected Areas ( mean, sd) and non-Marine Protected Areas (mean, sd) in 2012 differed significantly (p-value =`r mpa_2012_ttest$p.value`)
 
 ```{r}
-# Change in size at MPA sites from 2012 to 2018
+# Change in size at MPA sites from 2012 to 2018 (two-sample, two-sided, unpaired t-test)
 
 mpa_size_2012_sample <- lobster_mpa %>% 
   filter(mpa == "MPA", year == "2012") %>% 
@@ -164,7 +164,7 @@ mpa_size_ttest <- t.test(mpa_size_2012_sample, mpa_size_2018_sample)
 mpa_size_ttest
 
 
-# Change in size at non-MPA sizes from 2012 to 2018
+# Change in size at non-MPA sizes from 2012 to 2018 (two-sample, two-sided, paired t-test)
 
 non_mpa_size_2012_sample <- lobster_mpa %>% 
   filter(mpa == "non-MPA", year == "2012") %>% 
