--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -163,40 +163,17 @@ lobster_size_dist <- lobster_tidy %>%
 
 
 ```{r}
-# Explore with faceted densities 
-
-lobster_size_2012 <- lobster_size_dist %>% 
-  filter(year == "2012")
-
-lobster_size_2018 <- lobster_size_dist %>% 
-  filter(year == "2018")
 
 library(ggridges)
-
-ggplot(lobster_size_dist) +
-  stat_density_ridges(aes(x = size_mm,
-               y = ..density..),
-               quantile_lines = TRUE,
-               quantiles = 3) +
-  stat_density_ridges(aes(x = size_mm,
-               y = -..density..),
-               quantile_lines = TRUE,
-               quantiles = 2) +
-  facet_wrap(~site,
-             nrow = 1) 
-
-```
-
-
-```{r}
 
 ggplot(data = lobster_size_dist, aes(x = size_mm,
                                      y = factor(year, level = c('2018', '2012')))) + 
   stat_density_ridges(aes(fill = site),
-                      color = "gray30",
+                      color = "gray20",
+                      size = 0.3,
                       quantile_lines = TRUE,
                       quantiles = 2,
-                      alpha = 0.5,
+                      alpha = 0.4,
                       show.legend = FALSE) +
   xlim(30, 130) +
     scale_fill_manual(values = c("IVEE" = "aquamarine3",
@@ -206,7 +183,10 @@ ggplot(data = lobster_size_dist, aes(x = size_mm,
                                  "AQUE" = "indianred3")) +
   facet_wrap(~site,
              nrow = 1) +
-  theme_minimal()
+  theme_minimal() +
+  labs(x = "Lobster Size (mm)",
+       y = "Year")
+  
 
 ```
 
