--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -162,30 +162,33 @@ lobster_size_dist <- lobster_tidy %>%
 ```
 
 
-```{r}
+```{r fig.asp = 7/20}
 
 library(ggridges)
 
 ggplot(data = lobster_size_dist, aes(x = size_mm,
                                      y = factor(year, level = c('2018', '2012')))) + 
-  stat_density_ridges(aes(fill = site),
-                      color = "gray20",
-                      size = 0.3,
+  stat_density_ridges(aes(fill = site,
+                          alpha = year),
+                      color = "white",
+                      size = 0.4,
                       quantile_lines = TRUE,
                       quantiles = 2,
-                      alpha = 0.4,
                       show.legend = FALSE) +
-  xlim(30, 130) +
     scale_fill_manual(values = c("IVEE" = "aquamarine3",
                                  "NAPL" = "aquamarine3",
                                  "MOHK" = "indianred3",
                                  "CARP" = "indianred3",
                                  "AQUE" = "indianred3")) +
+  scale_alpha(range = c(0.6, 0.9)) +
   facet_wrap(~site,
              nrow = 1) +
+  scale_x_continuous(breaks = c(50, 75, 100),
+                     limits = c(25, 125)) +
   theme_minimal() +
+  theme(panel.spacing.x = unit(0.25, "lines")) +
   labs(x = "Lobster Size (mm)",
-       y = "Year")
+       y = "Count")
   
 
 ```
