Cleaned up document to match Allison's example, added headers, etc

--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -233,6 +233,14 @@ non_mpa_size_ttest
 
 ```
 
+```{r}
+# Cam double-checking t-test for mean lobster sizes at MPA and non-MPA sites
+
+
+
+```
+
+
 #### Summary
 
 - To be written
