--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -147,13 +147,16 @@ ggplot(data = lobster_size_dist, aes(x = size_mm,
               range = c(0.55, 0.95)) +
   theme_minimal() +
   theme(panel.spacing.x = unit(0.5, "lines"),
-        legend.key.size = unit(0.7,"line")) +
+        legend.key.size = unit(0.65,"line")) +
   labs(x = "Lobster size (mm)",
        y = element_blank()) +
   theme(legend.title = element_blank(),
-        legend.position = c(0, 0.85),
+        legend.position = c(0.81, 0.85),
         legend.text = element_text(size = 8),
-        panel.grid.minor.x = element_blank())
+        panel.grid.minor.x = element_blank(),
+        legend.margin = unit(1, "lines"),
+        legend.box.just = "top",
+        legend.background = element_rect(color = "white"))
 
 ```
 
