Literally only bolded one thing

--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -289,5 +289,5 @@ kable(lobster_summary, digits = 2) %>%
 
 #### References 
 
-*Reed D. 2019.* SBC LTER: Reef: Abundance, size and fishing effort for California Spiny Lobster (Panulirus interruptus), ongoing since 2012. Environmental Data Initiative. https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0. Dataset accessed 10/30/2019.
+**Reed D. 2019.** SBC LTER: Reef: Abundance, size and fishing effort for California Spiny Lobster (Panulirus interruptus), ongoing since 2012. Environmental Data Initiative. https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0. Dataset accessed 10/30/2019.
 
