--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -255,13 +255,13 @@ non_mpa_size_effect
 
 ```
 
-In 2012, mean lobster size in non-MPA sites was larger than in MPA sites by about 7.5 mm, with a medium effect size (t test (`r round(mpa_2012_ttest$parameter, 0)`), t = `r round(mpa_2012_ttest$statistic, 2)`, p-value = `r round(mpa_2012_ttest$p.value, 4)`, Cohen's d = `r round(mpa_2012_effect$estimate, 2)`). In 2018, mean lobster size was larger in MPAs than in non-MPAs by about 4 mm with a small effect size (t test (`r round(mpa_2018_ttest$parameter, 0)`), t = `r round(mpa_2018_ttest$statistic, 2)`, p-value = `r round(mpa_2018_ttest$p.value, 14)`, Cohen's d = `r round(mpa_2018_effect$estimate, 2)`).
+In 2012, mean lobster size in non-MPA sites was larger than in MPA sites by about 7.5 mm, with a medium effect size (t test (`r round(mpa_2012_ttest$parameter, 0)`), t = `r round(mpa_2012_ttest$statistic, 2)`, p-value < 0.005, Cohen's d = `r round(mpa_2012_effect$estimate, 2)`). In 2018, mean lobster size was larger in MPAs than in non-MPAs by about 4 mm with a small effect size (t test (`r round(mpa_2018_ttest$parameter, 0)`), t = `r round(mpa_2018_ttest$statistic, 2)`, p-value < 0.001, Cohen's d = `r round(mpa_2018_effect$estimate, 2)`).
 
-Between 2012 and 2018, mean lobster size in MPA sites increased by about 10 mm with a large effect size (t test (`r round(mpa_size_ttest$parameter, 0)`),t = `r round(mpa_size_ttest$statistic, 2)`, p-value = `r round(mpa_size_ttest$p.value, 6)`, Cohen's d = `r round(mpa_size_effect$estimate, 2)`) and decreased by about 1.3 mm in non-MPA sites with a small effect size (t test (`r round(non_mpa_size_ttest$parameter, 0)`), t = `r round(non_mpa_size_ttest$statistic, 2)`, p-value = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`))
+Between 2012 and 2018, mean lobster size in MPA sites increased by about 10 mm with a large effect size (t test (`r round(mpa_size_ttest$parameter, 0)`),t = `r round(mpa_size_ttest$statistic, 2)`, p-value < 0.001, Cohen's d = `r round(mpa_size_effect$estimate, 2)`) and decreased by about 1.3 mm in non-MPA sites with a small effect size (t test (`r round(non_mpa_size_ttest$parameter, 0)`), t = `r round(non_mpa_size_ttest$statistic, 2)`, p-value = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`))
 
 ##### 3. Mean lobster sizes at MPA and non-MPA sites in 2012 and 2018.
 
-***Table 1.** California Spiny Lobster mean size, standard deviation, and sample size in 2012 and 2018.*
+***Table 1.** California Spiny Lobster mean size, standard deviation, and sample size for samples collected in MPA and non-MPA sites in 2012 and 2018. MPA sites include Isla Vista and Naples and non-MPA sites include Arroyo Quemado, Carpinteria, and Mohawk.*
 
 ```{r, message = FALSE, warning = FALSE}
 
@@ -298,23 +298,29 @@ lobster_table_wide <- lobster_table %>%
               values_from = sample_n) %>% 
   group_by(year) %>% 
   summarise_each(funs(na.omit))
-  
 
-kable(lobster_summary, 
+kable(lobster_table_wide, 
       digits = 2,
-      col.names = c("Status",
-                    "Year",
-                    "Mean Size (mm)",
-                    "Standard Deviation",
-                    "Sample Size")) %>% 
-  kable_styling(bootstrap_options = c("striped", "hover")) 
+      align = "c",
+      col.names = c("Year",
+                    "MPA",
+                    "Non-MPA",
+                    "MPA",
+                    "Non-MPA",
+                    "MPA",
+                    "Non-MPA")) %>% 
+  add_header_above(c(" " = 1,
+                     "Mean Size (mm)" = 2,
+                     "Standard Deviation (mm)" = 2,
+                     "Sample Size" = 2)) %>% 
+  kable_styling(bootstrap_options = c("hover")) 
 
 ```
 
 
 #### Summary
 
-- Lobster abunadance increased at all site from 2012 to 2018, with the biggest increases at MPA sites (Figure 1).
+- Lobster abundance increased at all site from 2012 to 2018, with the biggest increases at MPA sites (Figure 1).
 - Lobster size increased at MPA sites from 2012 to 2018, but did not increase at non-MPA sites (Figure 2).
 - Mean lobster size was larger at non-MPA sites than at MPA sites in 2012, but in 2018, mean lobster size was greater at MPA sites than non-MPA sites (Table 1).
 
